--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "babel-preset-jest": "^24.9.0",
+    "canvasjs-react-charts": "^1.0.5",
     "eslint": "^7.32.0",
     "graphql": "^16.3.0",
     "plotly.js": "^2.9.0",
     "plotly.js-dist": "^2.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^16.13.1",
+    "react-moment": "^1.1.1",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
+    "react-stockcharts": "^0.7.8",
     "recharts": "^2.1.9"
   },
   "scripts": {
